--- a/css/news.css
+++ b/css/news.css
@@ -1,3 +1,6 @@
+@import url('https://webfontworld.github.io/iropke/IropkeBatang.css');
+
+
 /* main */
 
 main {
@@ -19,8 +22,10 @@ main .content{
   margin-top: 30px;
   width: 700px;
 }
+
 main .title{
   border-bottom: 1px solid #e5e5e5;
+
 }
 
 
@@ -50,7 +55,7 @@ main .item {
 main .item .item-text li{
   font-size: 17px;
   margin-bottom: 30px;
-  list-style: decimal;
+  list-style-type: circle;
   border-bottom: 1px solid #e5e5e5;
 }
 
@@ -59,8 +64,18 @@ main .item .item-text li p{
   display: flex;
 }
 
-.newstitle{
+
+
+.newslist > a ,
+.newslist > div > *,
+.newslist > div > p > *{
+  font-family: 'IropkeBatang';
   font-size: 20px;
+}
+
+.newstitle{
+  font-size: 30px;
+  font-weight: 800;
 }
 
 #moveup{
