--- a/css/help.css
+++ b/css/help.css
@@ -1,6 +1,20 @@
 /*import font*/
 @import url('https://webfontworld.github.io/busan/Busan.css');
+@import url('https://webfontworld.github.io/iropke/IropkeBatang.css');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@500&display=swap');
 
+:root{
+  --normal-line:1px solid;
+  
+  --light-gray:#dcdcdc90;
+  --medium-gray: #b4b4b4;
+  --dark-gray: #969696;
+
+  --font-17 : 17px;
+  --font-22 : 22px;
+  --font-25 : 25px;
+
+}
 
 *{
   margin: 0;
@@ -10,69 +24,6 @@
   box-sizing: border-box;
   font-family: 'busan', sans-serif;
 }
-/* body */
-
-a{
-  cursor: pointer;
-}
-
-
-/* Header */
-header {
-  width: 100%;
-  height: 60px;
-  background-color: black;
-  color: white;
-  justify-content:center;
-  z-index: 9;
-}
-
-.header {
-  width: 1200px;
-  display: flex;
-  align-items: center;
-  margin: 0 auto;
-}
-
-
-.header-logo{
-  display: flex;
-  align-items: center;
-  font-size: 25px;
-  letter-spacing: 2px;
-}
-
-.header-logo img{
-  width: 100px;
-  height: 60px;
-  position: relative;
-  left: 25px;
-}
-
-.header-menu{
-  list-style-type: none;
-  display: flex;
-  margin-left: 100px;
-}
-.header-menu li{
-  padding-right: 50px;
-}
-
-.header-menu li a,
-.header-login a,
-.header-logo{
-  color: white;
-}
-.header-login {
-  margin-left: 300px;
-}
-
-.header-login a{
-  margin-right: 10px;
-}
-
-
-
 
 
 
@@ -81,8 +32,8 @@ header {
 
 main{
   width: 100%;
-  height: 800px;
-  background: #fff;
+  height: 850px;
+  background: var(--light-gray);
   padding-top: 70px;
 }
 
@@ -107,8 +58,9 @@ main{
 }
 .l-menu{
   letter-spacing: 2px;
-  font-size: 16px;
-  border: 1px solid #e5e5e5;
+  font-size: var(--font-17);
+  border: var(--normal-line) var(--medium-gray);
+  background: var(--light-gray);
   display: flex;
   padding: 15px;
   cursor: pointer;
@@ -118,7 +70,7 @@ main{
 .l-menu a{
   color: black;
   letter-spacing: 2px;
-  font-size: 16px;
+  font-size: var(--font-17);
 }
 
 .l-menu i{
@@ -150,39 +102,57 @@ main{
 }
 
 .noti-main{
-  border: 1px solid #e5e5e5;
+  border: var(--normal-line) var(--medium-gray);
   display: flex;
 }
 
 .noti-title{
   width: 100%;
-  font-size: 16px;
+  font-size: var(--font-22);
   padding: 15px;
   float: overflow;
 }
 
 .noti-list{
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: var(--normal-line) var(--medium-gray);
   padding: 15px;
-  font-size: 15px;
+  font-size: var(--font-17);
   display: flex;
   cursor: pointer;
+}
+
+.noti-list i {
+  margin-right: 10px;
 }
 
 .noti-list p {
   margin-left: 10px;
 }
 
+.noti-ul li,
+.noti-ul div{
+  font-size: var(--font-17);
+  font-family: 'Noto Serif KR', serif;
+  font-weight: 500;
+}
+
 .noti-sub{
   padding: 16px 0;
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: var(--normal-line) var(--medium-gray);
 }
 
 
 .noti-sub-menu a{
   color: black;
+  font-family: 'Noto Serif KR', serif;
+  font-weight: 900;
+  font-size: var(--font-22);
 }
 
+.noti-sub-menu a:hover,
+.noti-sub-menu a:hover .noti-sub-bg{
+  color: var(--dark-gray);
+}
 
 .noti-sub ul{
   display: flex;
@@ -197,32 +167,32 @@ main{
   height: 2px;
   margin-bottom: 16px;
   background-color: black;
-  border: 1px solid black;
+  border: var(--normal-line) black;
 }
 
 
 .noti-sub-bg1{
-  width: 47px;
+  width: 64px;
   position: relative;
   bottom: 15px;
 
 }
 
 .noti-sub-bg2{
-  width: 32px;
+  width: 43px;
   position: relative;
   bottom: 15px;
 
 }
 
 .noti-sub-bg3{
-  width: 94px;
+  width: 128px;
   position: relative;
   bottom: 15px;
 }
 
 .noti-sub-bg4{
-  width: 32px;
+  width: 43px;
   position: relative;
   bottom: 15px;
 }
