--- a/css/login.css
+++ b/css/login.css
@@ -1,71 +1,11 @@
 @import url('https://webfontworld.github.io/busan/Busan.css');
 
-*{
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
-  font-family: 'busan', sans-serif;
-}
-
-a{
-    text-decoration: none;
-}
-
-header {
-    width: 100%;
-    height: 60px;
-    background-color: black;
-    color: white;
-    z-index: 9;
-  }
-  
-  .header {
-    width: 100%;
-    display: flex;
-  }
-
-  
-  .header-logo{
-    display: flex;
-    align-items: center;
-    font-size: 25px;
-    letter-spacing: 2px;
-    margin: 0 auto;
-  }
-  
-  .header-logo img{
-    width: 100px;
-    height: 60px;
-  }
-  
-  .header-menu{
-    list-style-type: none;
-    display: flex;
-    margin-left: 100px;
-  }
-  .header-menu li{
-    padding-right: 50px;
-  }
-  
-  .header-menu li a,
-  .header-login a,
-  .header-logo{
-    color: white;
-  }
-  .header-login {
-    margin-left: 300px;
-
-  }
-  
-  .header-login a{
-    margin-right: 10px;
-  }
 
 
 .container{
     min-height: 100vh;
     width: 100%;
-    background: url(../images/용궁사.jpg) no-repeat ;
+    background: url(../images/YonggungsaTemple.jpg) no-repeat ;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -74,7 +14,7 @@ header {
 
 .container form{
     width: 400px;
-    height: 415px;
+    height: 520px;
     background: rgba(150, 150, 150, 0.3);
     backdrop-filter: blur(100px);
     border-radius: 5px;
@@ -86,14 +26,14 @@ header {
 .container form h4{
     margin-top: 30px;
     margin-bottom: 40px;
-    font-size: 25px;
+    font-size: var(--font-25);
     color: #fff;
     font-weight: 300;
 }
 
 .container form .id ,
 .container form .password {
-    border-bottom: 1px solid #fff;
+    border-bottom: var(--normal-line) var(--light-gray);
     width: 300px;
     height: 40px;
     display: flex;
@@ -108,28 +48,28 @@ header {
     border: none;
     color: #fff;
     outline: none;
-    font-size: 16px;
+    font-size: var(--font-17);
     font-weight: 300;
     width: 270px;
 }
 
 .container form .id input::placeholder,
 .container form .password input::placeholder{
-    color: #dadada;
+    color: #dcdcdc;
 }
 
 .container form i{
   color: #dadada;
-  font-size: 20px;
+  font-size: var(--font-17);
   padding: 4px;
 }
 .container form ion-icon{
     color: #dadada;
-    font-size: 25px;
+    font-size: var(--font-25);
 }
 
 .container form .forgot{
-    font-size: 14px;
+    font-size: var(--font-17);
     margin-bottom: 20px;
     margin-right: 20px;
 }
@@ -147,8 +87,9 @@ header {
     background: black;
     border: none;
     color: #fff;
-    font-size: 16px;
+    font-size: var(--font-17);
     font-weight: 300;
+    text-align: center;
     width: 183px;
     height: 50px;
     margin-bottom: 5px;
@@ -158,12 +99,12 @@ header {
 
 .container form .keepsignedIn{
     color: #dadada;
-    font-size: 14px;
+    font-size: var(--font-17);
     display: flex;
     align-items: center;
     width: 200px;
     margin-right: 100px;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 }
 
 .container form .keepsignedIn input{
@@ -180,7 +121,7 @@ header {
 
 .container form .lowForm .SignUp{
     color: #e9e9e9;
-    font-size: 15px;
+    font-size: var(--font-17);
 }
 
 .container form .lowForm .social{
@@ -221,11 +162,4 @@ header {
     width: 183px;
     height: 40px;
     margin-bottom: 15px;
-}
-
-
-@media screen and (max-width:768px) {
-    .container{
-        background-color: #000;
-        }
 }
