--- a/css/notice.css
+++ b/css/notice.css
@@ -1,6 +1,20 @@
 /*import font*/
 @import url('https://webfontworld.github.io/busan/Busan.css');
+@import url('https://webfontworld.github.io/iropke/IropkeBatang.css');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@500&display=swap');
 
+:root{
+  --normal-line:1px solid;
+  
+  --light-gray:#dcdcdc90;
+  --medium-gray: #b4b4b4;
+  --dark-gray: #969696;
+
+  --font-17 : 17px;
+  --font-22 : 22px;
+  --font-25 : 25px;
+
+}
 
 *{
   margin: 0;
@@ -10,80 +24,14 @@
   box-sizing: border-box;
   font-family: 'busan', sans-serif;
 }
-/* body */
-
-a,
-button{
-  cursor: pointer;
-}
-
-
-/* Header */
-header {
-  width: 100%;
-  height: 60px;
-  background-color: black;
-  color: white;
-  justify-content:center;
-  z-index: 9;
-}
-
-.header {
-  width: 1200px;
-  display: flex;
-  align-items: center;
-  margin: 0 auto;
-}
-
-
-.header-logo{
-  display: flex;
-  align-items: center;
-  font-size: 25px;
-  letter-spacing: 2px;
-}
-
-.header-logo img{
-  width: 100px;
-  height: 60px;
-  position: relative;
-  left: 25px;
-}
-
-.header-menu{
-  list-style-type: none;
-  display: flex;
-  margin-left: 100px;
-}
-.header-menu li{
-  padding-right: 50px;
-}
-
-.header-menu li a,
-.header-login a,
-.header-logo{
-  color: white;
-}
-.header-login {
-  margin-left: 300px;
-}
-
-.header-login a{
-  margin-right: 10px;
-}
-
-
-
-
-
 
 /* main */
 
 
 main{
   width: 100%;
-  height: 800px;
-  background: #fff;
+  height: 850px;
+  background: var(--light-gray);
   padding-top: 70px;
 }
 
@@ -102,12 +50,13 @@ main{
 .l-sidebar{
   width: 230px;
   height: 200px;
-  background: white;
   margin-top: 20px;
 
 }
 .l-menu{
-  border: 1px solid #e5e5e5;
+  letter-spacing: 2px;
+  font-size: var(--font-17);
+  border: var(--normal-line) var(--medium-gray);
   display: flex;
   padding: 15px;
   cursor: pointer;
@@ -117,11 +66,11 @@ main{
 .l-menu a{
   color: black;
   letter-spacing: 2px;
-  font-size: 16px;
+  font-size: var(--font-17);
 }
 
 .l-menu i{
-  font-size: 16px;
+  font-size: var(--font-17);
   display: none;
 
 }
@@ -134,10 +83,6 @@ main{
 .l-menu:hover i {
   display: block;
 } 
-
-.rotate{
-  transform:rotate(90deg);
-}
 
 .l-sidebar div:not(:last-of-type){
   border-bottom: none;
@@ -159,20 +104,20 @@ main{
 }
 
 .noti-main{
-  border: 1px solid #e5e5e5;
+  border: var(--normal-line) var(--medium-gray);
 }
 
 .noti-title{
   width: 100%;
-  font-size: 16px;
+  font-size: var(--font-22);
   padding: 15px;
   float: overflow;
 }
 
 .noti-list{
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: var(--normal-line) var(--medium-gray);
   padding: 15px;
-  font-size: 15px;
+  font-size: var(--font-17);
   display: flex;
   cursor: pointer;
 }
@@ -180,6 +125,12 @@ main{
   margin-right: 15px;
 }
 
+.noti-ul li,
+.noti-ul div{
+  font-size: var(--font-17);
+  font-family: 'Noto Serif KR', serif;
+  font-weight: 500;
+}
 .a{
   width: 100%;
   height: 100%;
