--- a/css/news.css
+++ b/css/news.css
@@ -101,15 +101,24 @@ main .item .item-text li p{
   font-family: 'Noto Serif KR', serif;
 }
 
+/* moveup button */
+
 #moveup{
   position: fixed;
-  bottom: 30px;
+  bottom: 50px;
   right: 50px;
   width: 50px;
   height: 50px;
   font-size: 50px;
+  color: black;
 }
 #moveup:hover{
+  cursor: pointer;
+}
+img.bugi{
+  position: fixed;
+  bottom: 100px;
+  right: 25px;
   cursor: pointer;
 }
 
