--- a/css/busanIntroduce.css
+++ b/css/busanIntroduce.css
@@ -1,30 +1,14 @@
-:root{
-  --normal-line:1px solid;
-  
-  --light-gray:#dcdcdc90;
-  --medium-gray: #b4b4b4;
-
-  --font-17 : 17px;
-  --font-22 : 22px;
-  --font-25 : 25px;
-
-
-}
-
-html{
-  scroll-snap-type: y mandatory;
-}
 
 /* main section 1 */
 .main-section1{
-  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+  background: #e2ebf0 ;
+  background-size : 100% 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100vh;
-
-  scroll-snap-align:start;
+  letter-spacing: 2px;
 }
 
 
@@ -170,25 +154,10 @@ html{
 
 /* moveup button */
 
-#moveup{
-  position: fixed;
-  bottom: 50px;
-  right: 50px;
-  width: 50px;
-  height: 50px;
-  font-size: 50px;
-  color: black;
-}
-#moveup:hover{
-  cursor: pointer;
-}
+
 img.bugi{
   position: fixed;
   bottom: 100px;
   right: 25px;
   cursor: pointer;
-}
-
-footer{
-  scroll-snap-align:start;
 }
