--- a/css/busanIntroduce.css
+++ b/css/busanIntroduce.css
@@ -1,8 +1,27 @@
+:root{
+  --normal-line:1px solid;
+  
+  --light-gray:#dcdcdc90;
+  --medium-gray: #b4b4b4;
+  --dark-gray: #969696;
+
+  --font-17 : 17px;
+  --font-22 : 22px;
+  --font-25 : 25px;
+
+}
+
+@font-face {
+  font-family: 'ChosunGs';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/ChosunGs.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 
 /* main section 1 */
 .main-section1{
-  background: #e2ebf0 ;
-  background-size : 100% 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,27 +30,20 @@
   letter-spacing: 2px;
 }
 
-
-.main-section1-img img{
-  border-radius: 100%;
-  width: 600px;
-  height: 600px;
-}
-
 .main-section1-text {
-  width: 30%;
   margin: 10%;
+  color: rgb(46, 46, 46);
 }
 
 .main-section1-text h2{
   font-weight: 700;
-  font-size: 60px;
+  font-size: 120px;
   margin-bottom: 70px;
 }
 
 .main-section1-text h3{
-  font-weight: 300;
-  font-size: 30px;
+  font-weight: 700;
+  font-size: 40px;
   margin-bottom: 70px;
   letter-spacing: 1px;
 }
@@ -40,7 +52,6 @@
 /* main section 2 */
 
 .main-section2{
-  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -50,28 +61,20 @@
   scroll-snap-align:start;
 }
 
-
-
-.main-section2-img img{
-  border-radius: 100%;
-  width: 600px;
-  height: 600px;
-}
-
 .main-section2-text {
-  width: 30%;
   margin: 10%;
+  color: rgb(46, 46, 46);
 }
 
 .main-section2-text h2{
   font-weight: 700;
-  font-size: 60px;
+  font-size: 120px;
   margin-bottom: 70px;
 }
 
 .main-section2-text h3{
-  font-weight: 300;
-  font-size: 30px;
+  font-weight: 700;
+  font-size: 40px;
   margin-bottom: 70px;
   letter-spacing: 1px;
 }
@@ -79,7 +82,6 @@
 /* main section 3 */
 
 .main-section3{
-  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -89,27 +91,20 @@
   scroll-snap-align:start;
 }
 
-
-.main-section3-img img{
-  border-radius: 100%;
-  width: 600px;
-  height: 600px;
-}
-
 .main-section3-text {
-  width: 30%;
   margin: 10%;
+  color: rgb(46, 46, 46);
 }
 
 .main-section3-text h2{
   font-weight: 700;
-  font-size: 60px;
+  font-size: 120px;
   margin-bottom: 70px;
 }
 
 .main-section3-text h3{
-  font-weight: 300;
-  font-size: 30px;
+  font-weight: 700;
+  font-size: 40px;
   margin-bottom: 70px;
   letter-spacing: 1px;
 }
@@ -117,47 +112,44 @@
 /* main section 4 */
 
 .main-section4{
-  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100vh;
 
-  scroll-snap-align:start;
 }
 
-
-
-.main-section4-img img{
-  border-radius: 100%;
-  width: 600px;
-  height: 600px;
-}
 .main-section4-text {
-  width: 30%;
   margin: 10%;
+  color: rgb(46, 46, 46);
 }
 
 .main-section4-text h2{
   font-weight: 700;
-  font-size: 60px;
+  font-size: 100px;
   margin-bottom: 70px;
 }
 
 .main-section4-text h3{
-  font-weight: 300;
-  font-size: 30px;
+  font-weight: 700;
+  font-size: 40px;
   margin-bottom: 70px;
   letter-spacing: 1px;
+
 }
 
-/* moveup button */
+.slidecontent  a{
+  font-size: var(--font-22);
+}
 
 
-img.bugi{
-  position: fixed;
-  bottom: 100px;
-  right: 25px;
-  cursor: pointer;
+
+footer{
+  position:fixed;
+  bottom: 0;
+  display:block;
+  width: 100%;
+  z-index:9;
+
 }
