--- a/프론트 - 최종본/css/help.css
+++ b/프론트 - 최종본/css/help.css
@@ -26,7 +26,6 @@
 }
 
 
-
 /* main */
 
 
@@ -62,15 +61,16 @@ main{
   border: var(--normal-line) var(--medium-gray);
   background: var(--light-gray);
   display: flex;
-  padding: 15px;
+  padding: 15px;  
   cursor: pointer;
-  justify-content: space-between;
 }
 
 .l-menu a{
   color: black;
   letter-spacing: 2px;
   font-size: var(--font-17);
+  width: 100%;
+  height: 100%;
 }
 
 .l-menu i{
@@ -79,11 +79,18 @@ main{
 .l-menu:hover{
   transform-origin: center center;
   transform: scale(1.1);
-  transition: transform 0.2s;
+  transition: transform 0.8s;
+  background-color: black;
+  border: none;
+  justify-content: space-between;
 }
 
-.l-menu:hover i {
-  display: block;
+.l-menu:hover i,
+.l-menu:hover a,
+.l-menu:hover label{
+  display: flex;
+  color: white;
+  justify-content: space-between;
 }
 
 .l-sidebar div:not(:last-of-type){
@@ -98,7 +105,8 @@ main{
   margin-left: 20px;
   width: 900px;
   height: 100%;
-
+  display: inline-block;
+  padding-bottom: 130px;
 }
 
 .noti-main{
@@ -206,4 +214,27 @@ main{
 .rotate{
   transform: rotate(90deg);
   transition: all 0.5s;
+}
+
+#moveup{
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 50px;
+  height: 50px;
+  font-size: 50px;
+  color: black;
+}
+#moveup:hover{
+  cursor: pointer;
+}
+img.bugi{
+  position: fixed;
+  bottom: 100px;
+  right: 25px;
+  cursor: pointer;
+}
+
+footer{
+  width: 100%;
 }
