--- a/프론트 - 최종본/css/notice.css
+++ b/프론트 - 최종본/css/notice.css
@@ -57,32 +57,39 @@ main{
   letter-spacing: 2px;
   font-size: var(--font-17);
   border: var(--normal-line) var(--medium-gray);
+  background: var(--light-gray);
   display: flex;
-  padding: 15px;
+  padding: 15px;  
   cursor: pointer;
-  justify-content: space-between;
 }
 
 .l-menu a{
   color: black;
   letter-spacing: 2px;
   font-size: var(--font-17);
+  width: 100%;
+  height: 100%;
 }
 
 .l-menu i{
-  font-size: var(--font-17);
   display: none;
-
 }
 .l-menu:hover{
   transform-origin: center center;
   transform: scale(1.1);
-  transition: transform 0.2s;
+  transition: transform 0.8s;
+  background-color: black;
+  border: none;
+  justify-content: space-between;
 }
 
-.l-menu:hover i {
-  display: block;
-} 
+.l-menu:hover i,
+.l-menu:hover a,
+.l-menu:hover label{
+  display: flex;
+  color: white;
+  justify-content: space-between;
+}
 
 .l-sidebar div:not(:last-of-type){
   border-bottom: none;
