--- a/src/main/webapp/css/help.css
+++ b/src/main/webapp/css/help.css
@@ -26,6 +26,7 @@
 }
 
 
+
 /* main */
 
 
@@ -61,21 +62,15 @@ main{
   border: var(--normal-line) var(--medium-gray);
   background: var(--light-gray);
   display: flex;
-  padding: 15px;  
+  padding: 15px;
   cursor: pointer;
-  
-}
-
-main .title a:active{
-  color: var(--dark-gray);
+  justify-content: space-between;
 }
 
 .l-menu a{
   color: black;
   letter-spacing: 2px;
   font-size: var(--font-17);
-  width: 100%;
-  height: 100%;
 }
 
 .l-menu i{
@@ -84,18 +79,11 @@ main .title a:active{
 .l-menu:hover{
   transform-origin: center center;
   transform: scale(1.1);
-  transition: transform 0.8s;
-  background-color: black;
-  border: none;
-  justify-content: space-between;
+  transition: transform 0.2s;
 }
 
-.l-menu:hover i,
-.l-menu:hover a,
-.l-menu:hover label{
-  display: flex;
-  color: white;
-  justify-content: space-between;
+.l-menu:hover i {
+  display: block;
 }
 
 .l-sidebar div:not(:last-of-type){
@@ -110,8 +98,7 @@ main .title a:active{
   margin-left: 20px;
   width: 900px;
   height: 100%;
-  display: inline-block;
-  padding-bottom: 130px;
+
 }
 
 .noti-main{
@@ -219,27 +206,4 @@ main .title a:active{
 .rotate{
   transform: rotate(90deg);
   transition: all 0.5s;
-}
-
-#moveup{
-  position: fixed;
-  bottom: 50px;
-  right: 50px;
-  width: 50px;
-  height: 50px;
-  font-size: 50px;
-  color: black;
-}
-#moveup:hover{
-  cursor: pointer;
-}
-img.bugi{
-  position: fixed;
-  bottom: 100px;
-  right: 25px;
-  cursor: pointer;
-}
-
-footer{
-  width: 100%;
 }
