--- a/src/main/webapp/css/notice.css
+++ b/src/main/webapp/css/notice.css
@@ -25,7 +25,6 @@
   font-family: 'busan', sans-serif;
 }
 
-
 /* main */
 
 
@@ -36,12 +35,12 @@ main{
   padding-top: 70px;
 }
 
+
+/* leftSide */
 .main{
   display: flex;
   justify-content: center;
 }
-
-/* leftSide */
 
 .leftSide{
   width: 230px;
@@ -51,7 +50,6 @@ main{
 .l-sidebar{
   width: 230px;
   height: 200px;
-  background: white;
   margin-top: 20px;
 
 }
@@ -59,44 +57,32 @@ main{
   letter-spacing: 2px;
   font-size: var(--font-17);
   border: var(--normal-line) var(--medium-gray);
-  background: var(--light-gray);
   display: flex;
-  padding: 15px;  
+  padding: 15px;
   cursor: pointer;
-  
-}
-
-main .title a:active{
-  color: var(--dark-gray);
+  justify-content: space-between;
 }
 
 .l-menu a{
   color: black;
   letter-spacing: 2px;
   font-size: var(--font-17);
-  width: 100%;
-  height: 100%;
 }
 
 .l-menu i{
+  font-size: var(--font-17);
   display: none;
+
 }
 .l-menu:hover{
   transform-origin: center center;
   transform: scale(1.1);
-  transition: transform 0.8s;
-  background-color: black;
-  border: none;
-  justify-content: space-between;
+  transition: transform 0.2s;
 }
 
-.l-menu:hover i,
-.l-menu:hover a,
-.l-menu:hover label{
-  display: flex;
-  color: white;
-  justify-content: space-between;
-}
+.l-menu:hover i {
+  display: block;
+} 
 
 .l-sidebar div:not(:last-of-type){
   border-bottom: none;
@@ -105,18 +91,20 @@ main .title a:active{
 
 /* center */
 
+.noti-main{
+  display: flex;
+}
+
 .noti-container{
   margin-top: 20px;
   margin-left: 20px;
   width: 900px;
   height: 100%;
-  display: inline-block;
-  padding-bottom: 130px;
+
 }
 
 .noti-main{
   border: var(--normal-line) var(--medium-gray);
-  display: flex;
 }
 
 .noti-title{
@@ -133,13 +121,8 @@ main .title a:active{
   display: flex;
   cursor: pointer;
 }
-
-.noti-list i {
-  margin-right: 10px;
-}
-
-.noti-list p {
-  margin-left: 10px;
+.noti-list i{
+  margin-right: 15px;
 }
 
 .noti-ul li,
@@ -148,68 +131,6 @@ main .title a:active{
   font-family: 'Noto Serif KR', serif;
   font-weight: 500;
 }
-
-.noti-sub{
-  padding: 16px 0;
-  border-bottom: var(--normal-line) var(--medium-gray);
-}
-
-
-.noti-sub-menu a{
-  color: black;
-  font-family: 'Noto Serif KR', serif;
-  font-weight: 900;
-  font-size: var(--font-22);
-}
-
-.noti-sub-menu a:hover,
-.noti-sub-menu a:hover .noti-sub-bg{
-  color: var(--dark-gray);
-}
-
-.noti-sub ul{
-  display: flex;
-  justify-content:space-evenly;
-}
-.noti-bg-list{
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.noti-bg-list li{
-  height: 2px;
-  margin-bottom: 16px;
-  background-color: black;
-  border: var(--normal-line) black;
-}
-
-
-.noti-sub-bg1{
-  width: 64px;
-  position: relative;
-  bottom: 15px;
-
-}
-
-.noti-sub-bg2{
-  width: 43px;
-  position: relative;
-  bottom: 15px;
-
-}
-
-.noti-sub-bg3{
-  width: 128px;
-  position: relative;
-  bottom: 15px;
-}
-
-.noti-sub-bg4{
-  width: 43px;
-  position: relative;
-  bottom: 15px;
-}
-
 .a{
   width: 100%;
   height: 100%;
@@ -221,25 +142,4 @@ main .title a:active{
   transition: all 0.5s;
 }
 
-#moveup{
-  position: fixed;
-  bottom: 50px;
-  right: 50px;
-  width: 50px;
-  height: 50px;
-  font-size: 50px;
-  color: black;
-}
-#moveup:hover{
-  cursor: pointer;
-}
-img.bugi{
-  position: fixed;
-  bottom: 100px;
-  right: 25px;
-  cursor: pointer;
-}
 
-footer{
-  width: 100%;
-}
